--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "git-multiclone",
-  "version": "0.1.0",
-  "dependencies": {},
+  "author": {
+    "name": "Kalagin Ivan"
+  },
+  "version": "0.1.1",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
@@ -13,7 +15,7 @@
   },
   "scripts": {
     "build": "NODE_ENV=production babel src --out-dir build",
-    "start": "npm run build && npm run multiclone",
-    "multiclone": "node build/index.js -m"
+    "start-init": "npm run build && node build/index.js -i",
+    "start-multiclone": "npm run build && node build/index.js -m"
   }
 }
